<resources>
    <string name="app_name">TUGAS2_PAPB</string>
    <string name="welcome">WELCOME</string>
    <string name="uname">Username</string>
    <string name="pw">Password</string>
    <string name="login">LOGIN</string>
    <string name="forget">Forgot Password</string>
    <string name="remember">Remember Me</string>
    <string name="other">Do not Have an Account? Sigh Up</string>




</resources>